# generalStore

./: .gitignore  Cs.html  README.md  Readme.md  index.html  pyproject.toml  thanks.html
generalstore/: __init__.py  cli.py  config.py
generalstore/ingestion/: __init__.py  engine.py  hasher.py  watcher.py
generalstore/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py  pptx_parser.py  xlsx_parser.py
generalstore/security/: __init__.py  guard.py
generalstore/server/: __init__.py  mcp_server.py
generalstore/vectorstore/: __init__.py  store.py
